# arbor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  PR_DESCRIPTION.md  README.md  debug_wrapper.bat  err_check.txt  glama.json  log_dump.txt
.github/workflows/: flutter.yml  release.yml  rust.yml
arbor-windows-v0.1.0/arbor-release/visualizer/data/flutter_assets/: AssetManifest.json  NOTICES.Z
arbor-windows-v0.1.0/arbor-release/visualizer/data/flutter_assets/shaders/: pulse.frag
crates/: Cargo.toml  err.txt  err2.txt  input.json  log.txt  stderr.txt  test_output.txt
crates/arbor-cli/: Cargo.toml  README.md
crates/arbor-cli/src/: commands.rs  main.rs
crates/arbor-core/: Cargo.toml  README.md
crates/arbor-core/src/: parser_v2.rs
crates/arbor-core/src/languages/: cpp.rs  dart.rs  go.rs  java.rs
crates/arbor-graph/: Cargo.toml  README.md
crates/arbor-graph/src/: builder.rs  edge.rs  graph.rs  impact.rs  lib.rs  search_index.rs  store.rs  symbol_table.rs
crates/arbor-mcp/: Cargo.toml  README.md
crates/arbor-mcp/src/: lib.rs
crates/arbor-server/: Cargo.toml  README.md
crates/arbor-server/src/: handlers.rs  lib.rs  server.rs  sync_server.rs
crates/arbor-watcher/: Cargo.toml  README.md
docs/: ARCHITECTURE.md  PROTOCOL.md  ROADMAP.md  TOPICS.md
extensions/arbor-vscode/: README.md  package-lock.json  package.json  tsconfig.json
extensions/arbor-vscode/src/: extension.ts
visualizer/: analysis.txt  pubspec.yaml
visualizer/lib/core/: protocol.dart  providers.dart  theme.dart
visualizer/lib/graph/: force_layout.dart  graph_painter.dart  graph_widget.dart
visualizer/lib/services/: websocket_service.dart
visualizer/lib/views/: forest_view.dart
visualizer/shaders/: pulse.frag
