[package]
name = "arbor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AST parsing and code analysis for Arbor"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

tree-sitter.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-dart.workspace = true
tree-sitter-c-sharp.workspace = true

[dev-dependencies]
tempfile = "3.0"
