[package]
name = "arbor-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph schema and relationship tracking for Arbor"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

arbor-core = { path = "../arbor-core", version = "0.1.0" }
petgraph = "0.6"

[dev-dependencies]
tempfile = "3.0"
