[package]
name = "arbor-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Graph schema and relationship tracking for Arbor"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sled = "0.34"
bincode = "1.3"

arbor-core = { path = "../arbor-core", version = "0.1.0" }
petgraph = { version = "0.6", features = ["serde-1"] }

[dev-dependencies]
tempfile = "3.0"
