[package]
name = "arbor-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol server for Arbor"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow = "1.0"
async-trait = "0.1"

arbor-core = { path = "../arbor-core" }
arbor-graph = { path = "../arbor-graph" }
arbor-server = { path = "../arbor-server" }
